# rust-wasm-vite

./: .gitignore  index.html  license  readme.md
.github/workflows/: deploy_web.yml
assets/: game_of_life_bg-C7-BEZlg.wasm  game_of_life_bg-D48YawzX.wasm  index-CaORArav.js  index-DOzfUWRf.js  index-E44RHWDo.css  index-jhhHK-Y2.css
game_of_life/: Cargo.toml  build-wasm.ps1  build-wasm.sh
game_of_life/src/: lib.rs  native.rs  utils.rs  wasm.rs
game_of_life_cli/: Cargo.toml
game_of_life_cli/src/: main.rs
game_of_life_web/www/: package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
game_of_life_web/www/src/: App.css  App.tsx
game_of_life_web/www/src/types/: game_of_life.d.ts
