[package]
name = "game_of_life"
version = "0.1.0"
authors = ["Phiphou"]
edition = "2021"

[dependencies]
thiserror = "2.0.11"
cfg-if = "1.0.0"
console_error_panic_hook = { version = "0.1.1", optional = true }
wasm-bindgen = { version = "0.2.100", optional = true }
web-sys = { version = "0.3", optional = true, features = ["console", "Document", "Element"] }
fastrand = { version = "2.3.0" }


[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3"]

[profile.release]
opt-level = "s"
lto = true
panic = "abort"
codegen-units = 1
incremental = true

[features]
default = ["console_error_panic_hook"]
wasm = ["wasm-bindgen", "web-sys"]


[package.metadata.wasm]
memory = { initial = 256, maximum = 4096 }


[dev-dependencies]
wasm-bindgen-test = "0.3"

